--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: StratOS-Linux # Your GitHub organization or username, where this repository lives
-repo: uptime # The name of this repository
+repo: status # The name of this repository
 
 sites:
   - name: StratOS Website
