--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,8 +20,8 @@ status-website:
   # baseUrl: /uptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: StratOS Linux
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Are StratOS Linux's Mirrors or Repos Down?"
+  introMessage: Status Page of the repos and mirrors which power StratOS Linux.
   navbar:
     - title: Status
       href: /
