--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,6 +19,7 @@ status-website:
   theme: night
   cname: status.stratos-linux.org
   # baseUrl: /uptime
+  faviconSvg: https://raw.githubusercontent.com/StratOS-Linux/stratos-linux.github.io/refs/heads/main/public/favicon.svg
   logoUrl: https://raw.githubusercontent.com/StratOS-Linux/stratos-linux.github.io/refs/heads/main/public/favicon.svg
   name: StratOS Linux
   introTitle: "Are StratOS Linux's Mirrors or Repos Down?"
